examples/test/testpolicy18232.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18232
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key43: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value23
          key24: value19
      podSelector:
        matchLabels:
          key49: value25
          key31: value33
